# SwellSight.AI

./: .gitignore  README.md  SwellSight.ipynb  SwellSight_Complete_Training.ipynb  SwellSight_Inference_Demo.ipynb  SwellSight_Project_Overview.md  SwellSight_WaveAnalysis_Complete.ipynb  TASK_14_3_COMPLETION_SUMMARY.md  TASK_14_4_COMPLETION_SUMMARY.md  TASK_19_COMPLETION_SUMMARY.md  TASK_20_1_COMPLETION_SUMMARY.md  TASK_20_2_COMPLETION_SUMMARY.md  TASK_20_COMPLETION_SUMMARY.md  docker-compose.inference.yml  generate_depth_maps.py  improve_synthetic_quality.py  install_enhanced_controlnet_deps.py  pipeline_config.json  pyproject.toml  real_to_synthetic_pipeline.ipynb  real_to_synthetic_pipeline.py  requirements.txt  setup.py
.github/workflows/: deploy-inference.yml
checkpoints/: .gitkeep
docker/: Dockerfile.inference  entrypoint.sh
docs/: README.md  augmentation-parameters.md  controlnet-synthetic-generation.md  depth-based-analysis.md  faq.md  midas-depth-extraction.md  production-deployment.md  troubleshooting.md
experiments/swellsight_training_20260102_191236/: configs.json
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  pvc.yaml  service.yaml
logs/: .gitkeep
scripts/: deploy.sh
swellsight/: __init__.py
swellsight/api/: production_api.py
swellsight/config/: __init__.py  data_config.py  model_config.py  training_config.py
swellsight/data/: __init__.py  augmentation.py  controlnet_generator.py  data_scraper.py  dataset_manager.py  depth_analyzer.py  depth_map_storage.py  hybrid_data_loader.py  midas_depth_extractor.py  midas_real_integration.py  real_data_loader.py  synthetic_data_generator.py
swellsight/evaluation/: __init__.py  metrics_calculator.py
swellsight/inference/: __init__.py  inference_engine.py
swellsight/models/: __init__.py  multi_task_loss.py  wave_analysis_model.py
swellsight/scripts/: README.md  __init__.py  demo_depth_storage.py  end_to_end_pipeline.py  evaluate.py  example_config.json  final_validation.py  generate_training_data.py  infer.py  run_performance_benchmarks.py  train.py  train_end_to_end.py
swellsight/training/: __init__.py  data_quality_monitor.py  trainer.py
swellsight/utils/: __init__.py  checkpoint_utils.py  device_utils.py  model_optimization.py  model_persistence.py  model_versioning.py  performance_benchmarks.py  visualization_utils.py
test_data/metadata/: dataset_generation_report.json  synthetic_dataset_metadata.json
test_output/: pipeline_config.json  pipeline_results_20251231_230407.json
test_output/quality_reports/: quality_report_pipeline_synthetic_dataset_20251231_230407.json
tests/: __init__.py  conftest.py  test_setup.py
tests/integration/: __init__.py  test_api_integration.py  test_comprehensive_integration.py  test_comprehensive_integration_simple.py  test_end_to_end_pipeline.py  test_midas_storage_integration.py  test_real_image_processing.py
tests/property/: __init__.py  test_controlnet_generation_properties.py  test_data_properties.py  test_dataset_generation_properties.py  test_depth_analysis_properties.py  (+12 more)
(+9 files in other folders)
